<resources>
    <string name="app_name">AttendanceManager</string>
    <string name="title_activity_login_page">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="register">Click here to Register</string>
    <string name="email">Email</string>
    <string name="registerbutton">Register</string>
    <string name="signup">Already registered? Click here</string>
    <string name="reenter">Re-Enter Password</string>
    <string name="keepsigned">Keep me signed</string>
    <string name="signed">Keep me signed in</string>
    <string name="usersignin">User Sign-in</string>
    <string name="newregister">New User? Click here</string>
    <string name="logout">LOGOUT</string>
    <string name="textview">TextView</string>
</resources>
