<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vdntd.attendancemanager.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usersignin"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textColor="#323232"/>

    <EditText
        android:textAlignment="center"
        android:hint="@string/prompt_email"
        android:layout_marginBottom="10dp"
        android:id="@+id/emailAddressTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:textAlignment="center"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/signed" />

    <Button
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_signin_button_text"
        android:layout_marginBottom="20dp" />

    <TextView

        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#616161"
        android:id="@+id/textView"/>


    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/newregister" />

</LinearLayout>